# market-insights-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
data/: users.json.example
services/api_gateway/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/api_gateway/api_gateway/: config.py  dependencies.py  enums.py  main.py
services/api_gateway/api_gateway/clients/: base.py  (+2 more)
services/api_gateway/app/: exceptions.py
services/api_gateway/tests/: conftest.py
services/market_data/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/market_data/market_data/: assets.py  config.py  enums.py  exceptions.py  main.py  security.py
services/market_data/market_data/adapters/: base.py  coincap.py  coingecko.py
services/market_data/market_data/clients/: base.py  coincap.py  coingecko.py
services/market_data/market_data/models/: coincap.py  coingecko.py  internal.py
services/market_data/market_data/providers/: base.py  coincap.py  coingecko.py  factory.py
services/market_data/market_data/routers/: health.py  market.py
services/market_data/market_data/services/: market_data_service.py
services/market_data/tests/: conftest.py  test_assets.py
services/market_data/tests/adapters/: test_adapters.py
services/market_data/tests/clients/: test_clients.py
services/market_data/tests/providers/: test_factory.py
services/market_data/tests/routers/: test_market.py
services/market_signal/: Dockerfile  pyproject.toml
services/market_signal/market_signal/: config.py  main.py  models.py  security.py
services/market_signal/market_signal/routers/: health.py  signal.py
services/market_signal/market_signal/services/: signal_service.py
services/market_signal/tests/: conftest.py
services/market_signal/tests/routers/: test_signal.py
(+10 files in other folders)
