[project]
name = "market-data"
version = "0.1.0"
description = ""
authors = [
    { name = "bfilipov", email = "bogomil.filipov@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.0,<0.51.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
